--- a/.github/workflows/run.yaml
+++ b/.github/workflows/run.yaml
@@ -22,3 +22,4 @@ jobs:
       - name: Echo
         run: |
           echo "Running $PACKAGE"
+          cat packages.json | jq -r '.repositories[] | .name'
